# goit-algo2-hw-10

./: .gitignore  Makefile  README.md  pyproject.toml  task_1.py  task_2.py
